Emot clipping fix.

--- a/NBWChat/default/nbchat30.css
+++ b/NBWChat/default/nbchat30.css
@@ -136,7 +136,7 @@ body { font-family:Tahoma;font-size:14px; }
 /* Footer */
 #footerinfo { position:absolute;bottom:3px;height:20px;left:10px;right:10px;color:white;font-size:13px;}
 /* Chat Content */
-.linebreakindenter { overflow:hidden;position: relative; }
+.linebreakindenter { position: relative; }
 .emotestyle { display:inline-block; }
 .cpnicklocaluser { color:#000000; font-weight: bold; padding-left: 3px; }
 .cpnicktaggedlocaluser { color:#330066; font-weight: bold; padding-left: 3px; }
